[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepaudio"
version = "0.0.1"
description = "State-of-the-art Audio Machine Learning Models."
authors = [
    {name="XiaHan", email="jstzwj@aliyun.com"},
    {name="FrostMiKu", email="i@frostmiku.com"}
]
maintainers = [
    {name="XiaHan", email="jstzwj@aliyun.com"},
    {name="FrostMiKu", email="i@frostmiku.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "httpx", "numpy", "pydantic", "requests", "transformers",
    "rich>=10.0.0", "shortuuid", "torch", "torchaudio",
    "tenacity>=8.2.2", "huggingface_hub"
]

[project.optional-dependencies]
dev = ["black==23.3.0", "pylint==2.8.2"]


[project.urls]
"Homepage" = "https://github.com/vtuber-plan/deepaudio"
"Bug Tracker" = "https://github.com/vtuber-plan/deepaudio/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
